--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
         distribution: 'adopt'
        
     - name: Build with Maven    
-      run: mvn -B package -e verify
+      run: mvn -B -e verify
 
     
     
